--- a/test/index.html
+++ b/test/index.html
@@ -1,5 +1,5 @@
 
-<form action="127.0.0.1/signup" method="POST" id="form">
+<form action="/signup" method="POST" id="form">
 
     <label for="">
         <p> First Name:</p> <input type="text" name="name" class="input" required>
